--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ body {
     font-family: 'Roboto', sans-serif, open sans;
     font-weight:300;
     font-size: 250%;
-    background-color: #f5f5f5;
+    background-image: url("images/back.png");
+    background-repeat: repeat;
     margin-top:1%;
     margin-bottom:1%;
+   
 }
 
 p {
@@ -19,9 +21,33 @@ div {
     color: #AA8383;
     margin-top:1%;
     margin-bottom:1%;
+    text-align-last: center;
+    word-wrap: break-word;
+    
 }
 
-
+.test1{
+    background-image: url("images/Chair.jpg");
+    background-repeat:no-repeat;
+    background-position: center;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 5%;
+    align-content: center;
+    
+    
+}
+.test2{
+    background-image: url("images/Demon.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: 100%;
+    min-height: 65%;
+    min-width: 65;
+    max-height: 100%;
+    padding: 5%;
+    align-content: center;
+}
 
 footer {
     
@@ -34,10 +60,6 @@ footer {
     background-color: #f2f2f2;
     text-align: center;
    
-}
-.footer {
-    font-size: 30%;
-    background-color: #f2f2f2;
 }
 .alignleft{
     color: #AA8383;
